aks-poland-central/apps/edumeet/edumeet.yaml
---
# Redis
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    app: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels: 
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: redis-config
            items:
            - key: redis-config
              path: redis.conf
      containers:
        - name: redis
          image: redis
          command:
            - redis-server
            - "/redis-master/redis.conf"
          ports:
          - containerPort: 6379
          volumeMounts:
            - mountPath: /redis-master-data
              name: data
            - mountPath: /redis-master
              name: config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: edumeet-server
  labels:
    app.kubernetes.io/name: edumeet-server
    app.kubernetes.io/instance: edumeet
    app.kubernetes.io/version: "3.5.3"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: edumeet-server
    app.kubernetes.io/instance: edumeet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: edumeet-server
  labels:
    app.kubernetes.io/name: edumeet-server
    app.kubernetes.io/instance: edumeet
    app.kubernetes.io/version: "3.5.3"
spec:
  replicas: 1
  serviceName: edumeet-server
  selector:
    matchLabels:
      app.kubernetes.io/name: edumeet-server
      app.kubernetes.io/instance: edumeet
  template:
    metadata:
      annotations:
        linkerd.io/inject: disabled
        sidecar.istio.io/inject: "false"
      labels:
        app.kubernetes.io/name: edumeet-server
        app.kubernetes.io/instance: edumeet
    spec:
      containers:
        - name: edumeet-server
          image: "edumeet/edumeet:3.5.3"
          imagePullPolicy: IfNotPresent
          #command: ["sh", "-c", "sleep 3600"]
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          volumeMounts:
            - name: server-config
              mountPath: /opt/edumeet/server/dist/config
            - name: frontend-config
              mountPath: /opt/edumeet/server/dist/public/config
            - name: cert-volume
              mountPath: /opt/edumeet/server/certs
      volumes:
      - name: server-config
        configMap:
          name: edumeet-server
      - name: frontend-config
        configMap:
          name: edumeet-frontend
      - name: cert-volume
        secret:
          secretName: edumeet-tls
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edumeet-ingress
  namespace: edumeet
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - edumeet.aks-poland-central.stunner.cc
    secretName: edumeet-tls
  rules:
  - host: edumeet.aks-poland-central.stunner.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edumeet-server
            port:
              number: 443
---
